--- a/themes/jane/layouts/partials/header.html
+++ b/themes/jane/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <div class="logo-wrapper">
-  <a href="https://www.secondstate.io" class="logo">
+  <a href="http://www.secondstate.io" class="logo">
     {{ if .Site.Params.logoTitle }}
       {{ .Site.Params.logoTitle | safeHTML }}
     {{ else }}
