--- a/themes/jane/layouts/partials/header.html
+++ b/themes/jane/layouts/partials/header.html
@@ -1,4 +1,6 @@
 <div class="logo-wrapper">
+  <img src="/logo.png">
+  <!--
   <a href="https://www.secondstate.io" class="logo">
     {{ if .Site.Params.logoTitle }}
       {{ .Site.Params.logoTitle | safeHTML }}
@@ -6,6 +8,7 @@
       {{ .Site.Title }}
     {{ end }}
   </a>
+  -->
 </div>
 
 <nav class="site-navbar">
