--- a/themes/jane/layouts/partials/slideout.html
+++ b/themes/jane/layouts/partials/slideout.html
@@ -1,7 +1,7 @@
 <div id="mobile-navbar" class="mobile-navbar">
   <div class="mobile-header-logo">
     <a href="http://www.secondstate.io" class="logo">
-      <img src="/logo.png">
+      <img src="/logo-small.png">
       <!--
       {{ if .Site.Params.logoTitle }}
         {{ .Site.Params.logoTitle | safeHTML }}
