--- a/themes/jane/layouts/index.html
+++ b/themes/jane/layouts/index.html
@@ -1,13 +1,8 @@
-{{ define "content" }}
-  <section id="posts" class="posts">
-    {{/* (index .Site.Paginate) */}}
-    {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
-    {{ range $paginator.Pages }}
-      {{ .Render "summary" }}
-    {{ end }}
-  </section>
-
-  <!-- pagination -->
-  {{ partial "pagination.html" . }}
-
-{{ end }}
+<script>
+var language = window.navigator.userLanguage || window.navigator.language;
+if (language.lastIndexOf("zh", 0) === 0) {
+    window.location.replace("/categories/zh/");
+} else {
+    window.location.replace("/categories/en/");
+}
+</script>
