--- a/themes/jane/layouts/partials/footer.html
+++ b/themes/jane/layouts/partials/footer.html
@@ -1,3 +1,9 @@
+
+
+  <!-- newsletter -->
+  <script type="text/javascript">document.cookie = 'MCPopupClosed=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;'</script>
+  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us3.list-manage.com","uuid":"fff3b05c9dd4ef7b8163406d1","lid":"8eb8db2618","uniqueMethods":true}) })</script>
+
 <div class="social-links">
   {{- range $name, $path := .Site.Params.social }}
     {{- if $path }}
